--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<html>
+  <head>
+  <title>Netica Registration</title>
+  </head>
+  <body>
+  <h1>
+    Hello World
+    </h1>
+  </body>
+</html>
+
