--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <h4 class="MuiTypography-root jss495 MuiTypography-h4 MuiTypography-gutterBottom">Sign in to Webtica-CTI </h4>
+    <input aria-invalid="true" name="email" placeholder="Email for Registration" required="" type="text" class="MuiInputBase-input MuiOutlinedInput-input" value="">
+    
   </body>
 </html>
 
