--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <center>
+    <img src="/7bc194d6a08c53e37585aed3a7211b38.svg" alt="Webtica" width="80" height="80">
     <h4 class="MuiTypography-root jss495 MuiTypography-h4 MuiTypography-gutterBottom">Sign in to Webtica-CTI </h4>
     <input aria-invalid="true" name="email" placeholder="Email for Registration" required="" type="text" class="MuiInputBase-input MuiOutlinedInput-input" value="">
     </center>
