--- a/submit.html
+++ b/submit.html
@@ -49,7 +49,7 @@
         <div class="col"></div>
         <div class="col text-center">
 
-          Registration for token
+           Registered
 
         </div>
         <div class="col"></div>
@@ -58,7 +58,7 @@
       <div class="row">
         <div class="col"></div>
         <div class="col">
-          <form action="/submit.html" method="GET">
+          <form action="submit.html" method="GET">
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">Email address</label>
               <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
