--- a/submit.html
+++ b/submit.html
@@ -58,15 +58,7 @@
       <div class="row">
         <div class="col"></div>
         <div class="col">
-          <form action="submit.html" method="GET">
-            <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-      
-            </div>
-            
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </form>
+          Token: af6c6691-9311-4464-bd54-e7282e5f8c63 
         </div>
         <div class="col"></div>
       </div>
