--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="col"></div>
         <div class="col text-center">
 
-          <img src = "logo.svg" class="img-fluid" alt="My Happy SVG" width="100" height="100"/>
+          <a href=https://github.com/drasecurity/Netica_CTI/blob/main/README.md><img src = "logo.svg" class="img-fluid" alt="My Happy SVG" width="100" height="100"/></a>
 
         </div>
         <div class="col"></div>
