--- a/submit.html
+++ b/submit.html
@@ -38,7 +38,7 @@
         <div class="col"></div>
         <div class="col text-center">
 
-          <img src = "logo.svg" class="img-fluid" alt="My Happy SVG" width="100" height="100"/>
+          <a href=https://github.com/drasecurity/Netica_CTI/blob/main/README.md><img src = "logo.svg" class="img-fluid" alt="My Happy SVG" width="100" height="100"/></a>
 
         </div>
         <div class="col"></div>
@@ -59,7 +59,9 @@
         <div class="col"></div>
         <div class="col">
           Token: af6c6691-9311-4464-bd54-e7282e5f8c63 
-          
+
+          Proceed to: <a href=https://github.com/drasecurity/Netica_CTI/releases> Download Now </a>
+
         </div>
         <div class="col"></div>
       </div>
