--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
         <div class="col"></div>
         <div class="col text-center">
 
-          Registration for token
+          Token Registration<br>
+          To use Netica, token is needed for access our service. Please provide an email address for token access and for our further communications. The email address is optional. 
 
         </div>
         <div class="col"></div>
