--- a/submit.html
+++ b/submit.html
@@ -59,9 +59,12 @@
       <div class="row">
         <div class="col"></div>
         <div class="col">
-          Token: af6c6691-9311-4464-bd54-e7282e5f8c63 
+          Token: <br>
+          af6c6691-9311-4464-bd54-e7282e5f8c63 
 
-          Proceed to: <a href=https://github.com/drasecurity/Netica_CTI/releases> Download Now </a>
+          Please proceed to: <a href=https://github.com/drasecurity/Netica_CTI/releases> Download Now </a><br>
+
+          Token will be required during the installation of plugin.
 
         </div>
         <div class="col"></div>
