--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Netica Registration</title>
 
     <style>
       body {
@@ -50,10 +50,10 @@
         <div class="col"></div>
         <div class="col text-center">
 
-          Token Registration<br>
+          Token Registration<br><br><br>
           To use Netica, token is needed for access our service. Please provide an email address for token access and for our further communications. The email address is optional. 
 
-          
+
         </div>
         <div class="col"></div>
       </div>
