--- a/submit.html
+++ b/submit.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Netica Registration</title>
 
     <style>
       body {
@@ -59,14 +59,14 @@
       <div class="row">
         <div class="col"></div>
         <div class="col">
-          Token: <br>
-          af6c6691-9311-4464-bd54-e7282e5f8c63 
+          Token: <br><br>
+          af6c6691-9311-4464-bd54-e7282e5f8c63 <br><br>
 
-          Please proceed to: <a href=https://github.com/drasecurity/Netica_CTI/releases> Download Now </a><br>
+          Please proceed to: <a href=https://github.com/drasecurity/Netica_CTI/releases> Download Now </a><br><br>
 
           Token will be required during the installation of plugin.
 
-          
+
         </div>
         <div class="col"></div>
       </div>
