--- a/submit.html
+++ b/submit.html
@@ -10,7 +10,7 @@
 
     <title>Netica Registration</title>
 
-    
+
     <style>
       body {
         background-color: rgba(255, 255, 255, 0.9);
@@ -60,6 +60,7 @@
       <div class="row">
         <div class="col"></div>
         <div class="col">
+          Thanks for your interests. <br><br>
           Token: <br><br>
           af6c6691-9311-4464-bd54-e7282e5f8c63 <br><br>
 
