--- a/submit.html
+++ b/submit.html
@@ -50,9 +50,7 @@
       <div class="row">
         <div class="col"></div>
         <div class="col text-center">
-
            Registered
-
         </div>
         <div class="col"></div>
       </div>
@@ -60,6 +58,7 @@
       <div class="row">
         <div class="col"></div>
         <div class="col">
+          <div class="col text-center">
           Thanks for your interests. <br><br>
           Token: <br><br>
           af6c6691-9311-4464-bd54-e7282e5f8c63 <br><br>
@@ -67,7 +66,7 @@
           Please proceed to: <a href=https://github.com/drasecurity/Netica_CTI/releases> Download Now </a><br><br>
 
           Token will be required during the installation of plugin.
-
+        </div>
 
         </div>
         <div class="col"></div>
